<resources>
    <string name="app_name">Phish App TCSS 450 PolkN</string>

    <!--Login-->
    <string name="text_login_title">Phish App Login</string>
    <string name="image_login_logo">Phish App Logo</string>
    <string name="editText_login_email">Email</string>
    <string name="editText_login_password">Password</string>
    <string name="editText_login_emailtext">nadia.polk1@gmail.com</string>
    <string name="editText_login_passwordtext">ragdollnads</string>
    <string name="button_login_signIn">Sign In</string>
    <string name="button_login_register">Register</string>

    <!--Register-->
    <string name="text_register_title">Phish App Register</string>
    <string name="editText_register_email">Email</string>
    <string name="editText_register_password">Password</string>
    <string name="editText_register_retypePassword">Retype Password</string>
    <string name="editText_register_firstName">First Name</string>
    <string name="editText_register_lastName">Last Name</string>
    <string name="editText_register_username">Username</string>
    <string name="editText_register_emailtext">nadia.polk1@gmail.com</string>
    <string name="editText_register_passwordtext">testpass</string>
    <string name="editText_register_retypePasswordtext">testpass</string>
    <string name="button_register_register">Register</string>

    <string name="text_success_email"></string>


    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Navigation-->
    <string name="nav_header_title">Phish App</string>
    <string name="nav_header_subtitle">TCSS 450 Labs</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Settings Menu Actions-->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>


    <!-- Menu titles-->
    <string name="menu_home">Home</string>
    <string name="menu_blog">Blog Posts</string>
    <string name="menu_setList">Set List</string>
    <string name="menu_globalChat">Global Chat</string>

    <!--Blog Post-->
    <string name="button_blogPost_fullPost">Full Post</string>
    <string name="key_blogPost_view">Key</string>

    <!--Set List-->
    <string name="key_setList_view">Key</string>
    <string name="button_setListPost_fullSetList">Full Set List</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
